--- a/evoks/theme/templates/modals/create_property.html
+++ b/evoks/theme/templates/modals/create_property.html
@@ -1,58 +1,71 @@
-<div class="fixed z-50 inset-0 invisible" aria-labelledby="property-title" role="dialog" id="create-property-modal"
-    aria-modal="true">
-    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+<form action="#" method="post">
+    {% csrf_token %}
+    <div class="fixed z-50 inset-0 invisible" aria-labelledby="property-title" role="dialog" id="create-property-modal"
+        aria-modal="true">
+        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+            <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
 
-        <!-- This element is to trick the browser into centering the modal contents. -->
-        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-        <div
-            class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
-            <div>
-                <div class="mt-3 text-center sm:mt-0 sm:text-left">
-                    <h3 class="text-lg leading-6 font-medium text-gray-900" id="tag-title">
-                        Create Property
-                    </h3>
-                </div>
+            <!-- This element is to trick the browser into centering the modal contents. -->
+            <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+            <div
+                class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+                <div>
+                    <div class="mt-3 text-center sm:mt-0 sm:text-left">
+                        <h3 class="text-lg leading-6 font-medium text-gray-900" id="tag-title">
+                            Create Property
+                        </h3>
+                    </div>
 
-                <form class="space-y-8 divide-y divide-gray-200">
-                    <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
-                        <div>
-                            <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
-                                <div>
-                                    <label for="name" class="block text-sm font-medium text-gray-700">Predicate</label>
-                                    <div class="mt-1">
-                                        <input type="text" name="name" id="text"
-                                            class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                                            placeholder="skosmos:language">
+                    <form class="space-y-8 divide-y divide-gray-200">
+                        <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
+                            <div>
+                                <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
+                                    <div>
+                                        <label for="predicate" class="block text-sm font-medium text-gray-700">Predicate</label>
+                                        <div class="mt-1">
+                                            <input type="text" name="predicate" id="text"
+                                                class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
+                                                placeholder="skosmos:language">
+                                        </div>
                                     </div>
-                                </div>
-                                <div>
-                                    <label for="name" class="block text-sm font-medium text-gray-700">Object</label>
-                                    <div class="mt-1">
-                                        <input type="text" name="name" id="text"
-                                            class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                                            placeholder="en">
+                                    <div>
+                                        <label for="type" class="block text-sm font-medium text-gray-700">Type</label>
+                                        <div class="mt-1">
+                                            <select id="letter" name="type"
+                                                    class="mt-1 block pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-gray-500 focus:border-gray-500 sm:text-sm rounded-md">
+                                                    <option value="uri"> uri </option>
+                                                    <option value="literal"> literal </option>
+                                            </select>
+                                        </div>
                                     </div>
-                                </div>
+                                    <div>
+                                        <label for="object" class="block text-sm font-medium text-gray-700">Object</label>
+                                        <div class="mt-1">
+                                            <input type="text" name="object" id="text"
+                                                class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
+                                                placeholder="en">
+                                        </div>
+                                    </div>
 
+                                </div>
                             </div>
                         </div>
-                    </div>
+                </div>
+                <div class="mt-5 sm:mt-6 sm:grid sm:grid-cols-2 sm:gap-3 sm:grid-flow-row-dense">
+                    <button type="submit" name="create-property"
+                        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-regal-blue text-base font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:col-start-2 sm:text-sm">
+                        Create
+                    </button>
+                    <button type="button" id="create-property-modal-cancel"
+                        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:mt-0 sm:col-start-1 sm:text-sm">
+                        Cancel
+                    </button>
+                </div>
+                </form>
             </div>
-            <div class="mt-5 sm:mt-6 sm:grid sm:grid-cols-2 sm:gap-3 sm:grid-flow-row-dense">
-                <button type="button"
-                    class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-regal-blue text-base font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:col-start-2 sm:text-sm">
-                    Create
-                </button>
-                <button type="button" id="create-property-modal-cancel"
-                    class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:mt-0 sm:col-start-1 sm:text-sm">
-                    Cancel
-                </button>
-            </div>
-            </form>
         </div>
     </div>
-</div>
+</form>
 <script type="text/javascript">
     document.getElementById("create-property-modal-cancel").addEventListener("click", function (e) {
         document.getElementById("create-property-modal").classList.toggle("invisible");
